example/AnalyzeResult.txt
C:\Users\Radon\Desktop\fuzztest\4th\example\CheckData.cpp:99:6: error: Array 'a[2]' accessed at index 1000000, which is out of bounds. [arrayIndexOutOfBounds]
    a[1000000]=0;
     ^
